perl-Variable-Magic: Autospec creation for update from version 0.61 to version 0.62
0.62    2017-11-04 16:35 UTC
        + Fix : [RT #123314] : Compatibility with CV-in-stash optimisation
                Thanks Father Chrysostomos for reporting and contributing a
                patch.

--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = perl-Variable-Magic
+url = http://search.cpan.org/CPAN/authors/id/V/VP/VPIT/Variable-Magic-0.62.tar.gz
+archives = 
+giturl = 
+
 [autospec]
 # build 32 bit libraries
 32bit = false
